# JiraAnalytics

./: README.md  pyproject.toml  requirements.txt
data/cache/: KAFKA_all_issues_500.json  KAFKA_closed_issues_500.json
scripts/: run.bat
src/: config.py  data_processor.py  jira_client.py  main.py  plot_builder.py
