# Секция настроек системы сборки
[build-system]
# Список пакетов, необходимых для сборки проекта
requires = ["setuptools>=61.0", "wheel"]
# Бэкенд для сборки Python пакета
build-backend = "setuptools.build_meta"

# Секция с основной информацией о проекте
[project]
# Название проекта 
name = "jira-analytics"
# Минимальная версия Python, необходимая для работы
requires-python = ">=3.8"

# Основные зависимости, которые будут установлены автоматически
dependencies = [
    "jira>=3.6",           # Библиотека для работы с JIRA API
    "pandas>=2.1",         # Для обработки и анализа данных
    "numpy>=1.24",         # Для математических операций 
    "matplotlib>=3.7",     # Для построения графиков и визуализации
    "seaborn>=0.12",       # Для статистических графиков поверх matplotlib
    "python-dotenv>=1.0",  # Для загрузки переменных окружения из .env файлов
]

# Где искать Python пакеты в проекте
[tool.setuptools.packages.find]
where = ["src"]  # Указываем папку src как место с исходным кодом

# Секция для дополнительных (опциональных) зависимостей
[project.optional-dependencies]
# Группа зависимостей для разработки (устанавливается с флагом [dev])
dev = [
    "pytest>=7.0",    # Фреймворк для написания и запуска тестов
    "pytest-cov>=4.0",# Плагин для измерения покрытия кода тестами
]